--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Fernanda</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Fernandadp">Fernanda</a>.
     </p>
   </footer>
 </body></html>
